--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sheetal Sales Order</title>
+  <title>Job work Checklist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
